pagebuilder-saas-app/overlays/dev/traefik/ingress-https.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-https
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-wild
spec:
  tls:
    - hosts: 
      - "$(VC_PLATFORM_SERVICE).$(VC_NAMESPACE).govirto.com"
      secretName: $(VC_PLATFORM_SERVICE)-$(VC_NAMESPACE)-tls
    - hosts:   
      - "*.p.govirto.com"
      secretName: wildcard-domain-tls-secret-p
  rules:
  - host: "*.p.govirto.com"
    http:
      paths:
      - backend:
          serviceName: storefront
          servicePort: 80
        path: /
  - host: $(VC_PLATFORM_SERVICE).$(VC_NAMESPACE).govirto.com
    http:
      paths:
      - backend:
          serviceName: platform
          servicePort: 80
        path: /
